# docset-gen

./: .env.example  .gitignore  README.md  app.py  pyproject.toml  requirements.txt  tmpclaude-5bc4-cwd
.claude/: settings.local.json
src/docset_gen/: __init__.py  __main__.py  cleaner.py  cli.py  config.py  generator.py  llms_generator.py  scraper.py
tests/: __init__.py  test_cleaner.py  test_config.py  test_generator.py  test_llms_generator.py  test_scraper.py
