[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "docset-gen"
version = "1.0.0"
description = "Transform documentation into LLM training datasets"
requires-python = ">=3.10"
dependencies = [
    "firecrawl-py>=1.0",
    "openai>=1.0",
    "typer>=0.9",
    "rich>=13.0",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/docset_gen"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["docset_gen"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
